# document-scanner-desktop

./: .env.example  .gitignore  APP_AND_CODE_REVIEW.md  CLAUDE.md  EXCEL_HEADERS_ANALYSIS.md  FakturaCustomAnalyzer.json  IMPLEMENTATION_STATUS.md  INVOICE_IMPLEMENTATION_GUIDE.md  PRODUCTION_READY.md  PROJECT_ASSESSMENT_AND_CODE_REVIEW.md  PlataPayrollAnalyzer.json  README.md  TaxBalanceAnalyzer.json  VatReturnAnalyzer.json  analyze_excel.py  analyze_excel_summary.py  analyze_excel_v2.py  excel_headers_analysis.txt  index.html  package-lock.json  package.json  update.key  update.key.pub  vite.config.js  vite.config.ts
.claude/: settings.local.json
analyzers/: DDV.json  MIS.json  PayRoll.json  TaxBalance02.json
docs/: OVERVIEW.md  PRE_RELEASE_CHECKLIST.md  PUBLISHING_DESKTOP_APPS.md  RELEASE_CHECKLIST.md  RELEASE_PROCESS.md  SIGNING_KEY_SETUP.md
excel-structures/: Exaple-Invoices.json  README.md  РД-ДДВ-Example.json  РД-Данок_на_добивка-2024-Example.json  РД-Трошоци_за_вработени-Example.json  РД-Трошоци_за_вработени-Example_2.json
results/: COPY_InvoiceEUR_4095_3456-03-2025_17032025.pdf.json  ddv-12-2024.pdf.json  Даночен биланс.pdf.json  Плати 3.pdf.json
schemas/: DANOCEN_BILANS_FIELDS.md  DESCRIPTION_FIELD_SCHEMA_SNIPPET.json  MacedonianPayrollAnalyzer.json  MacedonianProfitTaxAnalyzer.json  MacedonianVatReturnAnalyzer.json  README.md  SimpleInvoiceListAnalyzer.json
src/: App.tsx  (+2 more)
src-tauri/: Cargo.toml  excel-dump.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 003_excel_schema_cache.sql
src-tauri/src/: commands.rs  db.rs  excel.rs  lib.rs  main.rs  ocr.rs  types.rs
src-tauri/src/cache/: mod.rs  schema_cache.rs
src-tauri/src/models/: excel_schema.rs  mod.rs
src-tauri/src/services/: excel_scanner.rs  mod.rs
(+84 files in other folders)
