[package]
name = "invoice-scanner"
version = "0.1.0"
description = "Invoice Scanner Desktop - OCR and Excel export"
edition = "2021"
rust-version = "1.70"

[lib]
name = "invoice_scanner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["codegen"] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dotenvy = "0.15"
calamine = "0.24"
rust_xlsxwriter = "0.72"
edit-xlsx = "0.4"
chrono = "0.4"
zip = "2.2"
regex = "1.10"
base64 = "0.22"
dirs = "5.0"
opener = "0.8"
